Updated ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,6 @@ Makefile
 /externals/lib_x64/
 *.txt
 *.zip
+/externals/qwt/projects/Qt/Makefile.qwt
+/externals/qwt/projects/Qt/Makefile.qwt.Debug
+/externals/qwt/projects/Qt/Makefile.qwt.Release
